25-09-2020: Optimierung für Nacht-/Blaulichtfilter-Modus
Alle blauen/gelben Farben wurden in Überschriften passend geändert, um die Lesbarkeit von Überschriften auch bei eingeschaltetem Nacht-Modus/Blaulichtfilter zu ermöglichen

--- a/Parkhaus.html
+++ b/Parkhaus.html
@@ -25,18 +25,22 @@
         /* Text alignments*/
         h1 {
             text-align: left;
+            color: red;
         }
         
         h2 {
             text-align: left;
+            color: green;
         }
 
         h3 {
             text-align: left;
+            color: darkcyan;
         }
 
         h4 {
             text-align: left;
+            color: cyan;
         }
     </style>
 
